fix duplicate DAs